feat(#72): URI